another renaming action

--- a/edbHook/src/main/resources/OSGI-INF/l10n/bundle.properties
+++ b/edbHook/src/main/resources/OSGI-INF/l10n/bundle.properties
@@ -15,5 +15,5 @@
 # limitations under the License.
 #
 
-domain.name=Deutsche \u00dcbersetzung des EDBListeners
-domain.description=Eine l\u00e4ngere Beschreibung. Man beachte die Kodierung der Umlaute.
+domain.name=EDBHook
+domain.description=A longer description of the provided domain. May be a few sentences long.
